--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
+    "react-redux-loading": "^4.6.1",
     "react-scripts": "1.1.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
